dnl /* ==================================================================== 
dnl  * Project "ulibdb"
dnl  * Copyright © 2017 Andreas Fink (andreas@fink.org). All rights reserved.
dnl  * ====================================================================
dnl  */ 

dnl initialization

dnl initialization
AC_PREREQ([2.69])
AC_INIT([ulibdb],[1.5.2],[andreas@fink.org])

dnl generic parameters
COPYRIGHT="Copyright © 2017 Andreas Fink (andreas@fink.org). All rights reserved."
PROJECT_NAME="ulibdb"
AUTHOR="Andreas Fink <andreas@fink.org>"
CONFIG_DEFINE="ULIBDB_CONFIG"
VERSION=`head -n 1 VERSION`
MAJORVER=`echo $VERSION | cut -f1 -d.`
MINORVER=`echo $VERSION | cut -f2 -d.`
REVISION=`echo $VERSION | cut -f3 -d.`
CONFIG_HEADER=Classes/ulibdb_config.h
DEPENDENT_PKGCONFIGS="ulib mariadb libpq"
PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
export PKG_CONFIG_PATH

AC_SUBST(SHELL)
AC_CONFIG_AUX_DIR(.)
AC_SET_TERMINAL_SEQUENCES()
AC_CONFIG_HEADERS([${CONFIG_HEADER}])
AC_SUBST(COPYRIGHT)
AC_SUBST(PROJECT_NAME)
AC_SUBST(AUTHOR)
AC_SUBST(CONFIG_DEFINE)
AC_SUBST(CONFIG_HEADER)
AC_SUBST(VERSION)

dnl Set user who runs ./configure
CUSER=`id -un`
AC_SUBST(CUSER)

AC_CONFIG_SECTION([Configuring for $PROJECT_NAME version $VERSION])

dnl Checks system type.
AC_CONFIG_SECTION([Running system checks])
AC_CANONICAL_HOST

dnl Apply system specific rules.
dnl Executable extension for systems that need one, i.e. Cygwin
dnl Set the LIBTOOL to be used to create libs
EXE_EXT=""
LIBTOOL="ar rc"
RANLIB="ranlib"
#
# we prefer clang over gcc
#
if [[ "$CC" == "" ]]
then
	CC=clang
fi
if [[ "$CXX" == "" ]]
then 
	CXX=clang++
fi
	
case "$host" in
  *apple-darwin*) 
	ARCH="-arch x86_64"
	OSX_DEVTOOL_DIR=`xcode-select -p`
	CFLAGS="$CFLAGS -D_REENTRANT=1 -DDARWIN=1 ${ARCH}"
	LDFLAGS=-framework CoreFoundation -framework IOKit -framework Security -F/Library/Application\ Support/FinkTelecomServices/frameworks ${FRAMEWORKS}
	LIBTOOL="libtool -static -o" 
	LIBS="$LIBS"
	SHARED_LIBRARY_EXTENSION=dylib
    ;;

  *-linux-*)
	OS_VERSION="unknown-0"
	if [[ -f /etc/os-release ]]
	then
		. /etc/os-release
		OS_VERSION="${ID}-${VERSION_ID}"
	fi
	VERSION=`head -n 1 VERSION`
	CFLAGS="$CFLAGS -std=c99 -fPIC -DLINUX -D_XOPEN_SOURCE=700 -D_POSIX_SOURCE"
	if [[ "$OS_VERSION" == "debian-8" ]]
	then
             CFLAGS="$CFLAGS -D_BSD_SOURCE"
        else
             CFLAGS="$CFLAGS -D_DEFAULT_SOURCE"
	fi
	if [[ "$OS_VERSION" == "ubuntu-16.04" ]]
	then
		UBUNTU_LIBS="-L/usr/lib/x86_64-linux-gnu/mit-krb5 -lgssapi_krb5"
		CFLAGS="$CFLAGS -D_DEFAULT_SOURCE"
	fi

	#DEBIAN_VERSION=`cat /etc/debian_version | cut -f1 -d.`
	#if [[ "$DEBIAN_VERSION" == "9" ]]
	#then
	#	LDFLAGS=$LDFLAGS -lldap_r  -lgsasl
	#fi

	#if [[ -f /usr/bin/pg_config ]]
	#then 
	#		# libpq wants some kerberos stuff, even static version but pg_config puts out rubbish not even on system */	
    #			USER_LIBS=`/usr/bin/pg_config --libs ·# | sed 's/-lpam//g' | sed 's/-lselinux//g'`
	#
	#fi
	CFLAGS="${CFLAGS} -Wno-trigraphs  -Wno-missing-field-initializers -Wmissing-prototypes -Wno-implicit-atomic-properties"
	CFLAGS="${CFLAGS} -Wno-arc-repeated-use-of-weak -Wduplicate-method-match -Wno-missing-braces -Wparentheses -Wswitch -Wunused-function -Wno-unused-label"
	CFLAGS="${CFLAGS} -Wno-unused-parameter -Wunused-variable -Wunused-value -Wempty-body -Wuninitialized -Wno-unknown-pragmas -Wno-shadow"
	CFLAGS="${CFLAGS} -Wno-four-char-constants -Wno-conversion -Wconstant-conversion -Wint-conversion -Wbool-conversion -Wenum-conversion"
	CFLAGS="${CFLAGS} -Wpointer-sign -Wno-newline-eof -Wno-selector -Wno-strict-selector-match -Wundeclared-selector"
	CFLAGS="${CFLAGS} -Wno-deprecated-implementations -Wprotocol -Wdeprecated-declarations -Wno-sign-conversion "
	CFLAGS="${CFLAGS} -fobjc-arc"
	CFLAGS="${CFLAGS} -fobjc-arc"
	if [[ -x /usr/local/bin/gnustep-config ]] 
	then
		GNUSTEP_CONFIG=/usr/local/bin/gnustep-config
	else
		GNUSTEP_CONFIG=/usr/bin/gnustep-config
	fi
	CFLAGS="$CFLAGS `$GNUSTEP_CONFIG --objc-flags`"
	LDFLAGS="$LDFLAGS `/usr/local/bin/gnustep-config --base-libs --objc-libs`"
	CFLAGS="$CFLAGS `pkg-config  --cflags ${DEPENDENT_PKGCONFIGS}`"
	LDFLAGS="$LDFLAGS `pkg-config --libs ${DEPENDENT_PKGCONFIGS}`"
	SHARED_LIBRARY_EXTENSION=so
        SHARED_FLAGS="-shared"
    ;;
  *-freebsd*)
	CFLAGS="$CFLAGS -std=c99 -fPIC -DFREEBSD"
	FREEBSD_VERSION=`uname -r`
	CFLAGS="$CFLAGS  -Wno-trigraphs  -Wno-missing-field-initializers -Wmissing-prototypes -Wno-implicit-atomic-properties"
	CFLAGS="$CFLAGS -Wno-arc-repeated-use-of-weak -Wduplicate-method-match -Wno-missing-braces -Wparentheses -Wswitch -Wunused-function -Wno-unused-label"
	CFLAGS="$CFLAGS -Wno-unused-parameter -Wunused-variable -Wunused-value -Wempty-body -Wuninitialized -Wno-unknown-pragmas -Wno-shadow"
	CFLAGS="$CFLAGS -Wno-four-char-constants -Wno-conversion -Wconstant-conversion -Wint-conversion -Wbool-conversion -Wenum-conversion"
	CFLAGS="$CFLAGS -Wshorten-64-to-32 -Wpointer-sign -Wno-newline-eof -Wno-selector -Wno-strict-selector-match -Wundeclared-selector"
	CFLAGS="$CFLAGS -Wno-deprecated-implementations -Wprotocol -Wdeprecated-declarations -Wno-sign-conversion "
	CFLAGS="$CFLAGS -fobjc-arc"
	SHARED_LIBRARY_EXTENSION="so"
	if [[ -x /usr/local/GNUstep/System/Tools/gnustep-config ]]
	then
		GNUSTEP_CONFIG=/usr/local/GNUstep/System/Tools/gnustep-config
		
	else
		if [[ -x /usr/local/bin/gnustep-config ]] 
		then
			GNUSTEP_CONFIG=/usr/local/bin/gnustep-config
		else
			GNUSTEP_CONFIG=/usr/bin/gnustep-config
		fi
	fi
	
	CFLAGS="$CFLAGS `$GNUSTEP_CONFIG --objc-flags`"
	LDFLAGS="$LDFLAGS `/usr/local/bin/gnustep-config --base-libs --objc-libs`"
	CFLAGS="$CFLAGS -DHAVE_OPENSSL=1"
	CFLAGS="$CFLAGS `pkg-config --cflags libssl libcrypto`"
	LDFLAGS="$LDFLAGS `pkg-config --libs libssl libcrypto`"
	AC_DEFINE(HAVE_OPENSSL)
	;;
esac
AC_SUBST(EXE_EXT)
AC_SUBST(LIBTOOL)
AC_SUBST(RANLIB)
AC_ARG_WITH(cflags,
[  --with-cflags=FLAGS     use FLAGS for CFLAGS],
CFLAGS="$CFLAGS $withval")

AC_ARG_WITH(libs,
[  --with-libs=FLAGS       use FLAGS for extra libraries],
LIBS="$LIBS $withval")


dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB


dnl Checks for libraries.
AC_CHECK_LIB(ulib, ulib_cpu_count)


dnl Config options
dnl -------------------------------------
AC_CONFIG_SECTION([Config options])



dnl Implement --enable-debug --enable-profiling options.
dnl -------------------------------------
AC_ARG_ENABLE(profiling,
[  --enable-profiling	  enable profiling  [disabled]], [
	echo Using Debuging+profiling target
	CFLAGS="$CFLAGS -pg -g -O0 -D${CONFIG_DEFINE}=Debug"
	LDFLAGS="$LDFLAGS -g"
	CONFIGURATION="-configuration Debug"
	AC_DEFINE(WS_DEBUG)
]
,
[
AC_ARG_ENABLE(debug,
[  --enable-debug	  enable debugging  [disabled]], [
	echo Using Debuging target
	CFLAGS="$CFLAGS -g -O0 -D${CONFIG_DEFINE}=Debug"
	LDFLAGS="$LDFLAGS -g"
	CONFIGURATION="-configuration Debug"
	AC_DEFINE(WS_DEBUG)
]
,
[
	echo Using Release target
	CFLAGS="$CFLAGS -O2 -D${CONFIG_DEFINE}=Release"
	CONFIGURATION="-configuration Release"
])])



AC_CONFIG_SECTION([Checking for PostgreSQL support])


AC_CHECK_FILE("/usr/local/postgresclient/include/libpq-fe.h",[PVARIANT=1],
 [AC_CHECK_FILE("/usr/include/postgresql/libpq-fe.h",[PVARIANT=2])])

if [[ "$PVARIANT" = "1" ]]
then
	AC_DEFINE(HAVE_PGSQL)
	POSTGRES_INCLUDE="-I/usr/local/postgresclient/include"
	POSTGRES_LIBS="-L/usr/local/postgresclient/lib -lpq"
fi
if [[ "$PVARIANT" = "2" ]]
then
	AC_DEFINE(HAVE_PGSQL)
	POSTGRES_INCLUDE="-I/usr/include/postgresql"
	POSTGRES_LIBS="-lpq"
fi

#if we have a static library, we include it
#
if [[ -f /usr/lib/x86_64-linux-gnu/libpq.a ]]
then
	POSTGRES_INCLUDE="";
	POSTGRES_LIBS="";
	STATIC_LIBS="/usr/lib/x86_64-linux-gnu/libpq.a"
else
	CFLAGS="$CFLAGS $POSTGRES_INCLUDE"
	LIBS="$LIBS $POSTGRES_LIBS"
fi


AC_DEFINE(HAVE_MYSQL)
MYSQL="yes"

CFLAGS="$CFLAGS `mysql_config --cflags`"
MYSQL_INCLUDE=`mysql_config --cflags`
if [[ -f "/usr/lib/x86_64-linux-gnu/libmysqlclient.a" ]]
then
	MYSQL_INCLUDE=""
	STATIC_LIBS="$STATIC_LIBS /usr/lib/x86_64-linux-gnu/libmysqlclient.a"
else
	LIBS="$LIBS `mysql_config --libs_r`"
fi

dnl Outputing
dnl -------------------------------------
AC_CONFIG_SECTION([Generating output files]) 

./make_version
dnl Final Output
AC_SUBST(PROJECT_NAME)
AC_SUBST(HAVE_MYSQL)
AC_SUBST(HAVE_PGSQL)
AC_SUBST(MYSQL_INCLUDE)
AC_SUBST(MYSQL_LIBS)
AC_SUBST(POSTGRES_INCLUDE)
AC_SUBST(POSTGRES_LIBS)
AC_SUBST(VERSION)
AC_SUBST(MAJORVER)
AC_SUBST(MINORVER)
AC_SUBST(REVISION)
AC_SUBST(STATIC_LIBS)
AC_SUBST(SHARED_LIBRARY_EXTENSION)
AC_SUBST(UBUNTU_LIBS)
AC_SUBST(USER_LIBS)
AC_CONFIG_FILES([Makefile.osx])
AC_CONFIG_FILES([Makefile.linux])
AC_CONFIG_FILES([Makefile.freebsd])
AC_CONFIG_FILES([ulibdb.pc])
AC_CONFIG_FILES([make_buildnr.sh])
AC_OUTPUT

chmod 755 make_buildnr.sh

if [[ -f BUILDNR ]]
then
	echo "Buildnumber: `cat BUILDNR`"
else
	echo "1" > BUILDNR
	echo "Buildnumber: 1"
	./make_buildnr.sh
fi

case "$host" in
  *apple-darwin*) 
    cp Makefile.osx Makefile
    ;;
  *-linux-*)
    cp Makefile.linux Makefile
    ;;
  *-freebsd*)
    cp Makefile.freebsd Makefile
    ;;
esac

dnl LICENSE notice

AC_CONFIG_SECTION([License information])
cat <<X
+--------------------------------------------------------------------
| Project: ${PROJECT_NAME} ${VERSION}
| ${COPYRIGHT}
+--------------------------------------------------------------------
X
